<resources>
    <string name="darklight">DARKLIGHT</string>
    <string name="start">START</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">Five</string>
    <string name="six">six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">nine</string>
    <string name="ten">ten</string>
    <string name="life">Life:</string>
    <string name="map">Map</string>
    <string name="back">Back</string>
    <string name="ask_her_who_she_is">Ask her who she is</string>
    <string name="throw_a_knife">Throw a knife</string>
    <string name="warn_her_to_keep_the_distance">Warn her to keep the distance</string>
    <string name="charge_with_knives">Charge with knives</string>
    <string name="cast_a_protective_spell_4_light">cast a protective spell(-4 Light)</string>
    <string name="run">Run</string>
    <string name="next">Next</string>
    <string name="restart_from_the_last_checkpoint">Restart From the last checkpoint</string>
    <string name="restart_chapter">Restart Chapter</string>
    <string name="last_choice_watch_a_video">Last Choice (Watch a video)</string>
    <string name="menu">MENU</string>
    <string name="you_died">YOU DIED</string>

    <string name="storyChapterOneSecondOption">"    You are a reaper from the North. "
            "A professional monster slayer. You were called to Astapor, the biggest city of the East, because the local slayers cannot handle the situation anymore."
            " You are brave and fearless, honorable and bold, remember this as you make choices through the game."
            "\n \n \n  \n "
            "     The sickle of the moon shines through the ragged clouds above the plain of Astapor. You are walking on the old road hoping to reach the city as soon as possible."
            "You can see the contour of the city rising on the horizon, looking ghostly in the moon's light. "
            "\n \n"
            "And then you felt it. The cold. A reaper is the ultimate monster hunter, and he can always feel the coldness when a servant of the darkness is nearby. "
            "Your heart stood still when you saw the woman standing in the middle of the road, ten meters before you. "
            "\n \n "
            " \"How did I not noticed her until now?\" you asked yourself. Slowly, she starts coming towards you."
            "\n \n"
            "What do you do? "</string>
    <string name="warnHerChoice">"You pull your sword out of the sheath from your back with a swift move, aiming the tip to her chest. "
            "\n \n"
            "\" Stay were you are!\" you yell at her. Now she is close enough for you to see her better. She is tall, dressed with an old black dress. Her hair is as dark as the obsidian, and her eyes even darker."
            "\" I can smell your fear, reaper\", she said."
            "\n \n"
            "\"I wonder what will you smell when your head will stay at your foots?\""
            "\n \n"
            "\"You are so bold.\" A smirk spread across her face. She grabbed your sword from the cut, and in less than a second it shattered in one thousand pieces. "
            "You're trying to cover your head with the hands, but not fast enough. A piece scraped your face, drawing a red line from the chin to your right ear."
            "Your sword is broken, but you still have two knives sheathed on the belt. Another option can be to cast a protective spell around you, which should reflect her spells."
            "\n \n "
            "What do you do?"</string>
    <string name="chargeWithKnivesChoice">"You charge with knives, but die"</string>
    <string name="one">One</string>
    <string name="chapter">Chapters</string>
    <string name="en">En</string>


</resources>
